JG-2007-04-18-0: Enhancem.: added test for qconf -Mrqs with duplicate rqs names.
                 Review:    AP, MD, MP, OJ

CR-2007-04-16-0: Enhancem.: added more output for auto_reschedule test when
                            timeout occurs.
                 Review:    RH

LP-2007-04-05-0: Enhancem.: Added new attributes "java16", "ant" to host config.
                            Issue 8: rename host property "java" to "java14"
                            Changed get_java_home_for_host to accept version
                            argument (default "1.4").
                            Removed get_java15_home_for_host.
                            Added check_java_version, check_ant_version
                            Added autodetect_java, autodetect_ant.                        
                 Review:    JG

RD-2007-04-04-0: Enhancem.: - new test for resource_reservation with calendar
                              disabled queue
                            - made testsuite default_duration=INFINITY aware
                            - fixed some tests for darwin as exechost
                 Review:    JG

JG-2007-04-05-0: Enhancem.: Added function for selecting hosts following certain
                            criteria (host_conf_get_suited_hosts).
                            Added commandline switch "preferred_archs" to use
                            certain preferred architectures for testing.
                 Review:    CR

JG-2007-03-28-0: Enhancem.: Added test for issue 2222 (hybrid user/project 
                            sharetree).
                            Cleanup.
                 Review:    AH

AP-2007-03-22-0: Bugfix:    ARCo testsuite update.
                 Changed:   Checktree_arco
                 Review:    JG

JG-2007-03-21-0: Enhancem.: New testsuite configuration parameter 
                            "additional_config", which allows to specify 
                            additional testsuite configurations, which can be 