@@ -1,3 +1,7 @@
+RD-2007-04-19-0: Bugfix:    - fixed resource_reservation
+                            - fixed spooledit
+                 Review:    JG
+
 JG-2007-04-18-0: Enhancem.: added test for qconf -Mrqs with duplicate rqs names.
                  Review:    AP, MD, MP, OJ
 
